docs: update README to v3.0.0 - new stack, features, tech table